bug 12607 - fixed mashtape overlapping with the rest of the app when in a side displaypane (r=steveo)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@11286 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/gonzo/chrome/content/global/tabbox.css
+++ b/feathers/gonzo/chrome/content/global/tabbox.css
@@ -140,6 +140,7 @@ tabs.sb-displaypane-tabs {
   border-bottom:1px solid transparent !important;
   background-color:transparent;
   padding:1px 0px 0px 0px;
+  overflow: hidden;
   
   background-image:none;
 }
